To make the website up

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Kaleem
+first_name: Kaleem Nawaz
 middle_name: Nawaz
 last_name: Khan
 email: kk5271@rit.edu
