--- a/_config.yml
+++ b/_config.yml
@@ -177,15 +177,15 @@ disqus_shortname: Kaleem Nawaz Khan # put your disqus shortname
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
-#   news:
-#     defaults:
-#       layout: post
-#     output: true
-#     permalink: /news/:path/
-# projects:
-#   output: true
-#   permalink: /projects/:path/
+collections:
+  news:
+    defaults:
+      layout: post
+    output: true
+    permalink: /news/:path/
+projects:
+  output: true
+  permalink: /projects/:path/
 
 announcements:
   enabled: true
