--- a/_config.yml
+++ b/_config.yml
@@ -177,12 +177,12 @@ giscus:
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
-#   news:
-#     defaults:
-#       layout: post
-#     output: true
-#     permalink: /news/:path/
+collections:
+  news:
+    defaults:
+      layout: post
+    output: true
+    permalink: /news/:path/
 #   projects:
 #     output: true
 #     permalink: /projects/:path/
