--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ giscus:
 # -----------------------------------------------------------------------------
 
 collections:
-  news:
+  News:
     defaults:
       layout: post
     output: true
