--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,7 @@ collections:
     defaults:
       layout: post
     output: true
+    title: News
     # permalink: /news/:path/
 #   projects:
 #     output: true
