--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 acm_id: # your dl.acm.org/profile/id
 blogger_url: # your blogger URL
 bluesky_url: # your bluesky URL
-dblp_url: # your DBLP profile url
+dblp_url: https://dblp.org/search?q=Kaleem+Nawaz+Khan
 discord_id: # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
@@ -361,9 +361,9 @@ max_author_limit: 3 # leave blank to always show all authors
 # more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
-enable_publication_thumbnails: false
+enable_publication_thumbnails: True
 
-# -----------------------------------------------------------------------------
+# ---------------------------s--------------------------------------------------
 # Jekyll Link Attributes
 # -----------------------------------------------------------------------------
 
