--- a/_config.yml
+++ b/_config.yml
@@ -421,7 +421,7 @@ enable_navbar_social: true # enables displaying social links in the navbar on th
 enable_project_categories: false # enables categorization of projects into multiple categories
 enable_medium_zoom: false # enables image zoom feature (as on medium.com)
 enable_progressbar: false # enables a horizontal progress bar linked to the vertical scroll position
-enable_video_embedding: true # enables video embedding for bibtex entries. If false, the button opens the video link in a new window.
+enable_video_embedding: false # enables video embedding for bibtex entries. If false, the button opens the video link in a new window.
 
 # -----------------------------------------------------------------------------
 # Library versions
